--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 
         <div class="content-box">
 
-            <div class="content-title wow fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
+            <div class="content-title wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
                 <h3> Services </h3>
                 <div class="content-title-underline"></div>
             </div>
 
             <div class="container">
 
-                <div class="row wow fadeInUp" ata-wow-duration="2s" data-wow-delay=".5s">
+                <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
 
                     <!-- row1 -->
                     <div class="col-md-4">
@@ -162,6 +162,51 @@
 
     </section>
 
+    <!-- About -->
+    <section id="about">
+
+        <!-- About right side with diagonal BG parallax -->
+        <div id="about-bg-diagonal"></div>
+
+        <!-- About left side with content -->
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-md-4">
+
+                    <div id="about-content-box">
+
+                        <div id="about-content-box-outer">
+
+                            <div id="about-content-box-inner">
+
+                                <div class="content-title wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
+                                    <h3> About Vesco </h3>
+                                    <div class="content-title-underline"></div>
+                                </div>
+
+                                <div id="about-desc" class="row wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
+                                    <p>Offendit non duis. An veniam singulis te voluptate o irure in non nulla fidelissimae hic non id elit summis quis. Cillum proident sed malis noster id multos nescius ita litteris. Id tamen non quorum, vidisse quid iis incurreret exquisitaque.</p>
+                                </div>
+
+                                <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
+                                    <a class="btn btn-lg btn-general btn-blue" href="#work" role="button"> Our Work </a>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
