--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <section id="about">
 
         <!-- About right side with diagonal BG parallax -->
-        <div id="about-bg-diagonal"></div>
+        <div id="about-bg-diagonal" class="bg-parallax"></div>
 
         <!-- About left side with content -->
         <div class="container">
@@ -207,6 +207,88 @@
         </div>
 
     </section>
+
+    <!-- Work -->
+    <section id="work">
+
+        <div class="content-box">
+
+            <div class="content-title wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
+                <h3> Our Work </h3>
+                <div class="content-title-underline"></div>
+            </div>
+
+            <div class="container">
+
+                <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
+
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/1.jpg" title="Work description goes here">
+                                <img src="img/work/1.jpg" class="img-responsive" alt="Work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/2.jpg" title="Work description goes here">
+                                <img src="img/work/2.jpg" class="img-responsive" alt="Work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/3.jpg" title="Work description goes here">
+                                <img src="img/work/3.jpg" class="img-responsive" alt="Work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/4.jpg" title="Work description goes here">
+                                <img src="img/work/4.jpg" class="img-responsive" alt="Work">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/5.jpg" title="Work description goes here">
+                                <img src="img/work/5.jpg" class="img-responsive" alt="Work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/6.jpg" title="Work description goes here">
+                                <img src="img/work/6.jpg" class="img-responsive" alt="Work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/7.jpg" title="Work description goes here">
+                                <img src="img/work/7.jpg" class="img-responsive" alt="Work">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="img-wrapper">
+                            <a href="img/work/8.jpg" title="Work description goes here">
+                                <img src="img/work/8.jpg" class="img-responsive" alt="Work">
+                            </a>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
