--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <!-- animate css -->
     <link rel="stylesheet" href="css/animate/animate.css">
 
+    <!-- magnific popup css -->
+    <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
+
     <!-- style css -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -218,9 +221,9 @@
                 <div class="content-title-underline"></div>
             </div>
 
-            <div class="container">
+            <div class="container-fluid">
 
-                <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
+                <div class="row no-gutters wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
 
                     <div class="col-md-3">
                         <div class="img-wrapper">
@@ -289,6 +292,115 @@
 
     </section>
 
+    <!-- Team -->
+    <section id="team">
+
+        <div class="content-box">
+
+            <div class="content-title wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
+                <h3> Our Team </h3>
+                <div class="content-title-underline"></div>
+            </div>
+
+            <div class="container">
+
+                <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
+
+                    <div class="col-md-12">
+
+                        <div id="team-members">
+
+                            <div class="team-member">
+
+                                <img src="img/team/team-1.jpg" class="img-responsive" alt="team member">
+
+                                <div class="team-member-info text-center">
+                                    <h4 class="team-member-name">Daniel Watrous</h4>
+                                    <h4 class="team-member-designation">CEO</h4>
+                                    <ul class="social-list">
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-google-plus"></i></a></li>
+                                    </ul>
+                                </div>
+
+                            </div>
+
+                            <div class="team-member">
+
+                                <img src="img/team/team-2.jpg" class="img-responsive" alt="team member">
+
+                                <div class="team-member-info text-center">
+                                    <h4 class="team-member-name">Sarah Smith</h4>
+                                    <h4 class="team-member-designation">Co-Founder</h4>
+                                    <ul class="social-list">
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-google-plus"></i></a></li>
+                                    </ul>
+                                </div>
+
+                            </div>
+
+                            <div class="team-member">
+
+                                <img src="img/team/team-3.jpg" class="img-responsive" alt="team member">
+
+                                <div class="team-member-info text-center">
+                                    <h4 class="team-member-name">Steve Mike</h4>
+                                    <h4 class="team-member-designation">Developer</h4>
+                                    <ul class="social-list">
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-google-plus"></i></a></li>
+                                    </ul>
+                                </div>
+
+                            </div>
+
+                            <div class="team-member">
+
+                                <img src="img/team/team-4.jpg" class="img-responsive" alt="team member">
+
+                                <div class="team-member-info text-center">
+                                    <h4 class="team-member-name">Roger Green</h4>
+                                    <h4 class="team-member-designation">Developer</h4>
+                                    <ul class="social-list">
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-google-plus"></i></a></li>
+                                    </ul>
+                                </div>
+
+                            </div>
+
+                            <div class="team-member">
+
+                                <img src="img/team/team-5.jpg" class="img-responsive" alt="team member">
+
+                                <div class="team-member-info text-center">
+                                    <h4 class="team-member-name">Franco Black</h4>
+                                    <h4 class="team-member-designation">Developer</h4>
+                                    <ul class="social-list">
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a href="#" class="social-icon icon-gray"><i class="fa fa-google-plus"></i></a></li>
+                                    </ul>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -298,6 +410,9 @@
 
     <!-- WOW js -->
     <script src="js/wow/wow.min.js"></script>
+
+    <!-- Magnific popup js -->
+    <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- custom js -->
     <script src="js/custom.js"></script>
