team section - css

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <!-- magnific popup css -->
     <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
 
+    <!-- owl carousel css -->
+    <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
+
     <!-- style css -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -308,7 +312,7 @@
 
                     <div class="col-md-12">
 
-                        <div id="team-members">
+                        <div id="team-members" class="owl-carousel owl-theme">
 
                             <div class="team-member">
 
@@ -413,6 +417,9 @@
 
     <!-- Magnific popup js -->
     <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+    <!-- Owl carousel js -->
+    <script src="js/owl-carousel/owl.carousel.min.js"></script>
 
     <!-- custom js -->
     <script src="js/custom.js"></script>
