--- a/index.html
+++ b/index.html
@@ -406,6 +406,186 @@
 
     </section>
 
+    <!-- Testimonials -->
+    <section id="testimonials">
+
+        <div id="testimonials-cover" class="bg-parallax">
+
+            <div class="content-box">
+
+                <div class="content-title content-title-white wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
+                    <h3> What Out Customers Say </h3>
+                    <div class="content-title-underline"></div>
+                </div>
+
+                <div class="container">
+
+                    <div class="row wow animated bounceInDown" data-wow-duration="2s" data-wow-delay=".5s">
+
+                        <div class="col-md-12">
+
+                            <div id="customers-testimonials" class="text-center owl-carousel owl-theme">
+
+                                <div class="testimonial">
+
+                                    <img src="img/client/client-1.jpg" class="img-responsive img-circle" alt="testimonial">
+
+                                    <blockquote class="text-center">
+                                        <p>Veniam quibusdam ab fugiat nulla hic varias probant reprehenderit, ipsum tempor hic instituendarum ab tamen occaecat et efflorescere. Iis do duis aliqua dolor. Proident e officia an aute ab laboris ad nulla te de ad noster illum nulla, nisi iudicem eu minim quis ex in e ipsum culpa dolore ita ex legam illum e expetendis, officia in cillum incididunt de ne noster non tamen.</p>
+                                    </blockquote>
+
+                                    <div class="testimonial-author">
+                                        <p>
+                                            <strong>Daniel Watrous</strong>
+                                            <span>CEO & Founder of Google</span>
+                                        </p>
+                                    </div>
+
+                                </div>
+
+                                <div class="testimonial">
+
+                                    <img src="img/client/client-2.jpg" class="img-responsive img-circle" alt="testimonial">
+
+                                    <blockquote class="text-center">
+                                        <p>Veniam quibusdam ab fugiat nulla hic varias probant reprehenderit, ipsum tempor hic instituendarum ab tamen occaecat et efflorescere. Iis do duis aliqua dolor. Proident e officia an aute ab laboris ad nulla te de ad noster illum nulla, nisi iudicem eu minim quis ex in e ipsum culpa dolore ita ex legam illum e expetendis, officia in cillum incididunt de ne noster non tamen.</p>
+                                    </blockquote>
+
+                                    <div class="testimonial-author">
+                                        <p>
+                                            <strong>Mark Wia</strong>
+                                            <span>CEO & Amazon</span>
+                                        </p>
+                                    </div>
+
+                                </div>
+
+                                <div class="testimonial">
+
+                                    <img src="img/client/client-3.jpg" class="img-responsive img-circle" alt="testimonial">
+
+                                    <blockquote class="text-center">
+                                        <p>Veniam quibusdam ab fugiat nulla hic varias probant reprehenderit, ipsum tempor hic instituendarum ab tamen occaecat et efflorescere. Iis do duis aliqua dolor. Proident e officia an aute ab laboris ad nulla te de ad noster illum nulla, nisi iudicem eu minim quis ex in e ipsum culpa dolore ita ex legam illum e expetendis, officia in cillum incididunt de ne noster non tamen.</p>
+                                    </blockquote>
+
+                                    <div class="testimonial-author">
+                                        <p>
+                                            <strong>Annabelle Roadhouse</strong>
+                                            <span>CEO of Alibaba</span>
+                                        </p>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- Pricing -->
+    <section id="pricing">
+
+        <div class="content-box">
+
+            <div class="content-title wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
+                <h3> Our Pricing </h3>
+                <div class="content-title-underline"></div>
+            </div>
+
+            <div class="container">
+
+                <div class="row">
+
+                    <div class="col-md-4 wow animated zoomIn" data-wow-duration="2s" data-wow-delay=".5s">
+                        <div class="pricing-box text-center">
+                            <h4 class="pricing-title">Basic</h4>
+                            <h3 class="pricing-value">49<sup>$</sup></h3>
+                            <ul class="pricing-spec">
+                                <li>
+                                    <p>500 EMAILS</p>
+                                </li>
+                                <li>
+                                    <p>5GB Disk Space</p>
+                                </li>
+                                <li>
+                                    <p>5GB Bandwidth</p>
+                                </li>
+                                <li>
+                                    <p>UNLIMITED DOMAINS</p>
+                                </li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-blue" href="#" role="button">Purchase</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 wow animated bounceInUp" data-wow-duration="2s" data-wow-delay=".5s">
+                        <div class="pricing-box pricing-box-lg text-center">
+                            <h4 class="pricing-title">Professional</h4>
+                            <h3 class="pricing-value">79<sup>$</sup></h3>
+                            <ul class="pricing-spec">
+                                <li>
+                                    <p>750 EMAILS</p>
+                                </li>
+                                <li>
+                                    <p>10GB Disk Space</p>
+                                </li>
+                                <li>
+                                    <p>10GB Bandwidth</p>
+                                </li>
+                                <li>
+                                    <p>UNLIMITED DOMAINS</p>
+                                </li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-white" href="#" role="button">Purchase</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 wow animated zoomIn" data-wow-duration="2s" data-wow-delay=".5s">
+                        <div class="pricing-box text-center">
+                            <h4 class="pricing-title">Enterprise</h4>
+                            <h3 class="pricing-value">99<sup>$</sup></h3>
+                            <ul class="pricing-spec">
+                                <li>
+                                    <p>1000 EMAILS</p>
+                                </li>
+                                <li>
+                                    <p>50GB Disk Space</p>
+                                </li>
+                                <li>
+                                    <p>UNLIMITED BANDWIDTH</p>
+                                </li>
+                                <li>
+                                    <p>UNLIMITED DOMAINS</p>
+                                </li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-blue" href="#" role="button">Purchase</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
