--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="img/favicon.ico">
 
     <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
 
     <!-- font awesome -->
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
@@ -586,6 +586,126 @@
 
     </section>
 
+    <!-- Stats -->
+    <section id="stats">
+
+        <div id="stats-cover" class="bg-parallax">
+
+            <div class="content-box">
+
+                <div class="content-title content-title-white wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
+                    <h3> We never stop improving </h3>
+                    <div class="content-title-underline"></div>
+                </div>
+
+                <div class="container">
+
+                    <div class="row text-center wow animated bounceInLeft" data-wow-duration="2s" data-wow-delay=".5s">
+
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-cloud-download fa-5x"></i>
+                                <h2><span class="counter">1590</span><span>+</span></h2>
+                                <p>Downloads</p>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-star-o fa-5x"></i>
+                                <h2><span class="counter">3500</span><span>+</span></h2>
+                                <p>Awards</p>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-heart-o fa-5x"></i>
+                                <h2><span class="counter">1199</span><span>+</span></h2>
+                                <p>Likes</p>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-check fa-5x"></i>
+                                <h2><span class="counter">2200</span><span>+</span></h2>
+                                <p>Reccomended</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- Clients -->
+    <section id="clients">
+
+        <div class="content-box">
+
+            <div class="content-title wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
+                <h3> Clients </h3>
+                <div class="content-title-underline"></div>
+            </div>
+
+            <div class="container">
+
+                <div class="row wow animated bounceInLeft" data-wow-duration="2s" data-wow-delay=".5s">
+
+                    <div class="col-md-12">
+
+                        <div id="clients-list" class="owl-carousel owl-theme">
+
+                            <div class="client">
+                                <img src="img/client/logos/logo-1.jpg" class="img-responsive" alt="client">
+                            </div>
+
+                            <div class="client">
+                                <img src="img/client/logos/logo-2.jpg" class="img-responsive" alt="client">
+                            </div>
+
+                            <div class="client">
+                                <img src="img/client/logos/logo-3.jpg" class="img-responsive" alt="client">
+                            </div>
+
+                            <div class="client">
+                                <img src="img/client/logos/logo-4.jpg" class="img-responsive" alt="client">
+                            </div>
+
+                            <div class="client">
+                                <img src="img/client/logos/logo-5.jpg" class="img-responsive" alt="client">
+                            </div>
+
+                            <div class="client">
+                                <img src="img/client/logos/logo-6.jpg" class="img-responsive" alt="client">
+                            </div>
+
+                            <div class="client">
+                                <img src="img/client/logos/logo-7.jpg" class="img-responsive" alt="client">
+                            </div>
+
+                            <div class="client">
+                                <img src="img/client/logos/logo-8.jpg" class="img-responsive" alt="client">
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
@@ -600,6 +720,10 @@
 
     <!-- Owl carousel js -->
     <script src="js/owl-carousel/owl.carousel.min.js"></script>
+
+    <!-- Counter Js -->
+    <script src="js/counter/jquery.waypoints.min.js"></script>
+    <script src="js/counter/jquery.counterup.min.js"></script>
 
     <!-- custom js -->
     <script src="js/custom.js"></script>
