--- a/index.html
+++ b/index.html
@@ -706,6 +706,82 @@
 
     </section>
 
+    <footer>
+
+        <!-- Contact -->
+        <div id="contact">
+
+            <div class="container">
+
+                <div class="row">
+
+                    <!-- Contact Left -->
+                    <div class="col-md-6">
+
+                        <div id="contact-left">
+
+                            <h3>VESCO</h3>
+
+                            <p>Proident an <strong>duis</strong> iudicem, te est legam <strong>commodo</strong> non minim ut ullamco ea legam id</p>
+
+                            <div id="contact-info">
+
+                                <address>
+                                    <strong>Headquarters:</strong><br>
+                                    <p>via roma 1<br>
+                                    60030 Jesi (AN)</p>
+                                </address>
+
+                                <div id="phone-fax-email">
+                                    <p>
+                                        <strong>Phone: </strong><span>0731-202020</span><br>
+                                        <strong>Fax: </strong><span>0731-202021</span><br>
+                                        <strong>Email: </strong><span>info@vesco.com</span>
+                                    </p>
+                                </div>
+
+                            </div>
+
+                            <ul class="social-list">
+                                <li><a href="#" class="social-icon icon-white"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#" class="social-icon icon-white"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#" class="social-icon icon-white"><i class="fa fa-youtube-play"></i></a></li>
+                                <li><a href="#" class="social-icon icon-white"><i class="fa fa-google-plus"></i></a></li>
+                            </ul>
+
+                        </div>
+
+                    </div>
+
+                    <!-- Contact Right -->
+                    <div class="col-md-6">
+
+                        <div id="contact-right">
+
+                            <h3>CONTACT US</h3>
+
+                            <form action="#">
+                                <input type="text" name="full-name" placeholder="Full Name" class="form-control">
+                                <input type="text" name="email" placeholder="Email Address" class="form-control">
+                                <textarea rows="5" name="message" placeholder="Message ..." class="form-control"></textarea>
+
+                                <div id="send-btn">
+                                    <a class="btn btn-lg btn-general btn-white" role="button">SEND</a>
+                                </div>
+                            </form>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </footer>
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
