--- a/index.html
+++ b/index.html
@@ -38,7 +38,54 @@
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="65">
+
+    <header>
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-fixed-top" role="navigation">
+
+            <div class="container-fluid">
+
+                <div class="vesco-nav-wrapper">
+
+                    <div class="navbar-header">
+
+                        <button type="button" class="navbar-toggle collpased" data-toggle="collapse" data-target="#vesco-menu">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+
+                        <a class="navbar-brand" href="#home">
+                            <img src="img/logo.png" alt="logo">
+                        </a>
+
+                    </div>
+
+                    <div class="collapse navbar-collapse" id="vesco-menu">
+                        <ul class="nav navbar-nav">
+                            <li><a class="smooth-scroll" href="#home">Home</a></li>
+                            <li><a class="smooth-scroll" href="#services">Services</a></li>
+                            <li><a class="smooth-scroll" href="#about">About</a></li>
+                            <li><a class="smooth-scroll" href="#work">Work</a></li>
+                            <li><a class="smooth-scroll" href="#team">Team</a></li>
+                            <li><a class="smooth-scroll" href="#testimonials">Testimonials</a></li>
+                            <li><a class="smooth-scroll" href="#pricing">Pricing</a></li>
+                            <li><a class="smooth-scroll" href="#stats">Stats</a></li>
+                            <li><a class="smooth-scroll" href="#clients">Clients</a></li>
+                            <li><a class="smooth-scroll" href="#contact">Contact</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </nav>
+
+    </header>
 
     <!-- Home -->
     <section id="home">
@@ -54,7 +101,7 @@
                     </div>
 
                     <div id="home-btn" class="animated zoomIn">
-                        <a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="View Our Work">View Our Work</a>
+                        <a class="smooth-scroll btn btn-lg btn-general btn-white" href="#work" role="button" title="View Our Work">View Our Work</a>
                     </div>
 
                 </div>
@@ -198,7 +245,7 @@
                                 </div>
 
                                 <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
-                                    <a class="btn btn-lg btn-general btn-blue" href="#work" role="button"> Our Work </a>
+                                    <a class="smooth-scroll btn btn-lg btn-general btn-blue" href="#work" role="button"> Our Work </a>
                                 </div>
 
                             </div>
@@ -780,6 +827,49 @@
 
         </div>
 
+        <div id="footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div id="footer-copyright">
+                            <p>Copyrights &copy; 2017 All Right Reserved by Vesco Inc.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="footer-menu">
+                            <ul>
+                                <li>
+                                    <a class="smooth-scroll" href="#home">Home</a> /
+                                </li>
+                                <li>
+                                    <a class="smooth-scroll" href="#services">Services</a> /
+                                </li>
+                                <li>
+                                    <a class="smooth-scroll" href="#work">Work</a> /
+                                </li>
+                                <li>
+                                    <a class="smooth-scroll" href="#team">Team</a> /
+                                </li>
+                                <li>
+                                    <a class="smooth-scroll" href="#testimonials">Testimonials</a> /
+                                </li>
+                                <li>
+                                    <a class="smooth-scroll" href="#pricing">Pricing</a> /
+                                </li>
+                                <li>
+                                    <a class="smooth-scroll" href="#stats">Stats</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <a href="#home" id="back-to-top" class="btn btn-sm btn-blue btn-back-to-top smooth-scroll" title="home" role="button">
+            <i class="fa fa-angle-up"></i>
+        </a>
+
     </footer>
 
     <!-- jQuery -->
@@ -800,6 +890,9 @@
     <!-- Counter Js -->
     <script src="js/counter/jquery.waypoints.min.js"></script>
     <script src="js/counter/jquery.counterup.min.js"></script>
+
+    <!-- easing -->
+    <script src="js/easing/jquery.easing.1.3.js"></script>
 
     <!-- custom js -->
     <script src="js/custom.js"></script>
