--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 
     <!-- required by meta tags -->
     <meta charset="utf-8">
+
+    <!-- SEO -->
+    <meta name="description" content="Building modern responsive website with h5ml5, css3, jquery and bootstrap framework">
+    <meta name="keywords" content="HTML5, CSS3, jQuery, Bootstrap, Web Design, Web Development, Responsive Website, Modern Website">
+
     <meta http-equiv="X-UA-Compatibible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,6 +41,9 @@
     <!-- style css -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- responsive css -->
+    <link rel="stylesheet" href="css/responsive.css">
+
 </head>
 
 <body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="65">
@@ -51,7 +59,7 @@
 
                     <div class="navbar-header">
 
-                        <button type="button" class="navbar-toggle collpased" data-toggle="collapse" data-target="#vesco-menu">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#vesco-menu">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -97,7 +105,7 @@
                 <div id="home-content-box-inner" class="text-center">
 
                     <div id="home-heading" class="animated zoomIn">
-                        <h3>Watch Out <br> The Modern Responsive Website!</h3>
+                        <h3>Watch Out<br>The Modern Responsive Website!</h3>
                     </div>
 
                     <div id="home-btn" class="animated zoomIn">
@@ -124,11 +132,11 @@
 
             <div class="container">
 
-                <div class="row wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
+                <div class="row">
 
                     <!-- row1 -->
-                    <div class="col-md-4">
-                        <div class="service-item">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-paint-brush fa-3x"></i>
                             </div>
@@ -140,8 +148,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="service-item">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-laptop fa-3x"></i>
                             </div>
@@ -153,8 +161,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="service-item">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-tablet fa-3x"></i>
                             </div>
@@ -168,8 +176,8 @@
                     </div>
 
                     <!-- row2 -->
-                    <div class="col-md-4">
-                        <div class="service-item">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-search fa-3x"></i>
                             </div>
@@ -181,8 +189,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="service-item">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-pencil-square-o fa-3x"></i>
                             </div>
@@ -194,8 +202,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="service-item">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-life-ring fa-3x"></i>
                             </div>
@@ -245,7 +253,7 @@
                                 </div>
 
                                 <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
-                                    <a class="smooth-scroll btn btn-lg btn-general btn-blue" href="#work" role="button"> Our Work </a>
+                                    <a class="smooth-scroll btn btn-lg btn-general btn-blue" href="#work" role="button" title="View Work"> Our Work </a>
                                 </div>
 
                             </div>
@@ -276,28 +284,28 @@
 
                 <div class="row no-gutters wow animated fadeInUp" data-wow-duration="2s" data-wow-delay=".5s">
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="Work description goes here">
                                 <img src="img/work/1.jpg" class="img-responsive" alt="Work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/2.jpg" title="Work description goes here">
                                 <img src="img/work/2.jpg" class="img-responsive" alt="Work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/3.jpg" title="Work description goes here">
                                 <img src="img/work/3.jpg" class="img-responsive" alt="Work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/4.jpg" title="Work description goes here">
                                 <img src="img/work/4.jpg" class="img-responsive" alt="Work">
@@ -305,35 +313,34 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/5.jpg" title="Work description goes here">
                                 <img src="img/work/5.jpg" class="img-responsive" alt="Work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/6.jpg" title="Work description goes here">
                                 <img src="img/work/6.jpg" class="img-responsive" alt="Work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/7.jpg" title="Work description goes here">
                                 <img src="img/work/7.jpg" class="img-responsive" alt="Work">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/8.jpg" title="Work description goes here">
                                 <img src="img/work/8.jpg" class="img-responsive" alt="Work">
                             </a>
                         </div>
                     </div>
-
 
                 </div>
 
@@ -461,7 +468,7 @@
             <div class="content-box">
 
                 <div class="content-title content-title-white wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">
-                    <h3> What Out Customers Say </h3>
+                    <h3> What Our Customers Say </h3>
                     <div class="content-title-underline"></div>
                 </div>
 
@@ -649,7 +656,7 @@
 
                     <div class="row text-center wow animated bounceInLeft" data-wow-duration="2s" data-wow-delay=".5s">
 
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-cloud-download fa-5x"></i>
                                 <h2><span class="counter">1590</span><span>+</span></h2>
@@ -657,7 +664,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-star-o fa-5x"></i>
                                 <h2><span class="counter">3500</span><span>+</span></h2>
@@ -665,7 +672,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-heart-o fa-5x"></i>
                                 <h2><span class="counter">1199</span><span>+</span></h2>
@@ -673,7 +680,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-check fa-5x"></i>
                                 <h2><span class="counter">2200</span><span>+</span></h2>
@@ -831,11 +838,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <div id="footer-copyright">
+                        <div id="footer-copyrights">
                             <p>Copyrights &copy; 2017 All Right Reserved by Vesco Inc.</p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 hidden-sm hidden-xs">
                         <div id="footer-menu">
                             <ul>
                                 <li>
@@ -866,7 +873,7 @@
             </div>
         </div>
 
-        <a href="#home" id="back-to-top" class="btn btn-sm btn-blue btn-back-to-top smooth-scroll" title="home" role="button">
+        <a href="#home" id="back-to-top" class="btn btn-sm btn-blue btn-back-to-top smooth-scroll hidden-sm hidden-xs" title="home" role="button">
             <i class="fa fa-angle-up"></i>
         </a>
 
