--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <header>
 
         <!-- Navigation -->
-        <nav class="navbar navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-fixed-top">
 
             <div class="container-fluid">
 
